# Karma

./: .gitignore  AGENT.md  CASE_DESIGN_GUIDELINE.md  CITATION.cff  CLAUDE.md  EXPERIMENT_ADVERSARIAL_INJECTION_REPORT.md  FINAL_REPORT.md  LICENSE  PLAN.md  README.md  benchmark-env.sh  main.py  node_group2  orchestrator.py  proxy.py  pyproject.toml  requirements.txt
.benchmark/repeat_matrix/: README.md  param_sweep_matrix_summary.json  repeat_stage_agent.py  (+10 more)
app/: case_params.py  decoys.py  llm_config.py  oracle.py  orchestrator_cli.py  preconditions.py  runner.py  server.py  settings.py  snapshots.py  test_schema.py  util.py  workflow.py
docs/: architecture.md  default-system-prompt.md  example-preservation-system-prompt.md  example-regression-prompt.md  example-rubric.yaml  overview.md  prompt-mode-prologues.yaml
karma/: __init__.py  _warn.py  evidence.py  oracle.py  protocol.py  sandbox.py  settings.py
profiles/: README.md  codex.yaml  debug.yaml
resources/: KUBERNETES.md  judge_base.yaml  metrics.yaml
runs/: README.md
scripts/: README_FIXED_STAGE_MATRIX.md  README_RABBITMQ_BLUEGREEN_SINGLE_MATRIX.md  README_WORKFLOW_STAGE_COMPARISON.md  agent_fixed_stage_reliability.py  agent_limit_search.py  agent_single_stage_reliability.py  judge.py  run-added-workflows.sh  run_codex_model_fixed_stage_matrix.sh  run_codex_model_limit_matrix.sh  run_codex_model_rabbitmq_bluegreen_single_matrix.sh  setup-cluster.sh  setup-kind-cluster.sh  setup-proxy.sh  validate_ported_case.py  workflow_stage_comparison_sweep.py
static/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  run_integration.py  run_unit.py  test_definitions_cases.py
webui/: index.html
workflows/: adversary-capstone.yaml  mongodb-rbac-reset-script-after-rbac-setup.yaml  mongodb-rbac-reset-script-single.yaml  rabbitmq-blue-green-migration-30-stage-alternating.yaml  rabbitmq-blue-green-migration-single.yaml  rabbitmq-two-cycle-xy-rotation.yaml  rabbitmq-upgrade-tls-migration-a-to-b.yaml  workflow-demo-adversary.yaml  workflow-demo.yaml
(+25959 files in other folders)
