[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "karma"
version = "0.2.0"
description = "Kubernetes Agent Reliability & Microservice Assessment benchmarking framework"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "anthropic>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["karma*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
