[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karma"
version = "0.2.0"
description = "Kubernetes Agent Reliability & Microservice Assessment benchmarking framework"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["karma*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
