[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karma"
version = "0.2.0"
description = "Kubernetes Agent Runtime Measurement Architecture benchmarking framework"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

# Console command created on install so the documented `orchestrator.py`
# invocations run as-is after `pip install -e .` (no `python` prefix needed).
[project.scripts]
"orchestrator.py" = "karma.interfaces.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["karma*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
